firefox z-index fix

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -495,6 +495,7 @@ main {
 		height: 0;
 		opacity: 1;
 		padding: 0;
+		z-index: -999;
 	}
 }
 
